--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,9 @@ jobs:
 
   build:
     name: ${{ matrix.os }} python ${{ matrix.python-version }}
+
     runs-on: ${{ matrix.os }}
+
     if: >-
         !contains(github.event.head_commit.message, '[skip ci]')
         && !contains(github.event.head_commit.message, '[skip tests]')
@@ -15,9 +17,8 @@ jobs:
       # fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python-version: [3.9]
         # os: [ubuntu-latest, macos-latest, windows-latest]
-        # python-version: [3.7, 3.9]
+        python-version: [3.6, 3.9]
 
     env:
       POETRY_VIRTUALENVS_CREATE: false
@@ -42,6 +43,7 @@ jobs:
 
       - name: Install poetry
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        shell: bash
         run: |
           curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
           python get-poetry.py -y
@@ -49,6 +51,7 @@ jobs:
 
       - name: Build and install with poetry
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        shell: bash
         run: |
           poetry env info
           poetry run python -m pip install --upgrade pip
@@ -59,6 +62,7 @@ jobs:
 
       - name: Run tests
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        shell: bash
         run: |
           poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml --durations=0
 
@@ -87,14 +91,29 @@ jobs:
         with:
           python-version: 3.9
 
-      - name: Install poetry and this package
+      - name: Install toml
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        shell: bash
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install toml
-          python -m pip install poetry  # Only install poetry like this in containers
-          python -m poetry update
-          python -m poetry build
-          python -m poetry install --no-dev
+          python -m pip install --upgrade pip toml
+
+      - name: Install poetry
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        shell: bash
+        run: |
+          curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
+          python get-poetry.py -y
+
+      - name: Build and install with poetry
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        shell: bash
+        run: |
+          $HOME/.poetry/bin/poetry env info
+          $HOME/.poetry/bin/poetry run python -m pip install --upgrade pip
+          rm poetry.lock
+          $HOME/.poetry/bin/poetry update
+          $HOME/.poetry/bin/poetry build
+          $HOME/.poetry/bin/poetry install --no-interaction --no-dev
 
       - name: Bump version
         shell: bash
@@ -109,7 +128,7 @@ jobs:
           # incremented.  See the documentation of the `poetry version` command for details.
           export version_bump_rule=$(python .github/scripts/parse_bump_rule.py)
           echo "version_bump_rule: '${version_bump_rule}'"
-          python -m poetry version "${version_bump_rule}"
+          $HOME/.poetry/bin/poetry version "${version_bump_rule}"
           export new_version=$(python .github/scripts/parse_version.py pyproject.toml)
           echo "new_version: '${new_version}'"
           echo "new_version=${new_version}" >> $GITHUB_ENV  # Save env variable for later steps
@@ -143,10 +162,12 @@ jobs:
           # 1) Get key from https://pypi.org/manage/account/token/
           # 2) Copy it to Github > repo > Settings > Secrets
           POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+        shell: bash
         run: |
-          python -m poetry build
-          python -m poetry install --no-dev
-          python -m poetry publish
+          # Do these first two steps again to ensure the version is right
+          $HOME/.poetry/bin/poetry build
+          $HOME/.poetry/bin/poetry install --no-interaction --no-dev
+          $HOME/.poetry/bin/poetry publish
 
 
   binder:
