--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,9 @@ jobs:
 
   build:
     name: ${{ matrix.os }} python ${{ matrix.python-version }}
+
     runs-on: ${{ matrix.os }}
+
     if: >-
         !contains(github.event.head_commit.message, '[skip ci]')
         && !contains(github.event.head_commit.message, '[skip tests]')
@@ -15,18 +17,15 @@ jobs:
       # fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8] #, 3.9] #, pypy3]
-        # exclude:
-        #   - os: windows-latest
-        #     python-version: pypy3
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
       - name: Skip replicates on main branch
         env:
-          skip_replicates: ${{ github.ref == 'refs/heads/main' && (matrix.os != 'ubuntu-latest' || matrix.python-version != '3.8') }}
+          skip_replicates: ${{ github.ref == 'refs/heads/main' && (matrix.os != 'ubuntu-latest' || matrix.python-version != '3.9') }}
         run: |
-          # echo "skipping_build_and_test_replicate=${skip_replicates}" >> $GITHUB_ENV
-          echo "skipping_build_and_test_replicate='false'" >> $GITHUB_ENV
+          echo "skipping_build_and_test_replicate=${skip_replicates}" >> $GITHUB_ENV
+          # echo "skipping_build_and_test_replicate='false'" >> $GITHUB_ENV
 
       - name: Check out code
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
@@ -40,24 +39,31 @@ jobs:
 
       - name: Install poetry
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        shell: bash
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install poetry  # Only install poetry like this in containers
+          curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
+          python get-poetry.py -y
+          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
 
       - name: Build and install with poetry
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        shell: bash
         run: |
+          poetry run python -m pip install --upgrade pip
+          poetry env info
           rm poetry.lock
-          python -m poetry build
-          python -m poetry install
+          poetry update
+          poetry build
+          poetry install --no-interaction
 
       - name: Run tests
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        shell: bash
         run: |
-          python -m poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml --durations=0
+          poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml --durations=0
 
       - name: Upload coverage
-        if: "matrix.python-version == 3.8 && matrix.os == 'ubuntu-latest'"
+        if: "matrix.python-version == 3.9 && matrix.os == 'ubuntu-latest'"
         shell: bash
         run: |
           bash <(curl -s https://codecov.io/bash)
@@ -79,25 +85,46 @@ jobs:
       - name: Set up python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: 3.9
 
-      - name: Install poetry and this package
+      - name: Install toml
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        shell: bash
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install toml
-          python -m pip install poetry  # Only install poetry like this in containers
-          python -m poetry update
-          python -m poetry build
-          python -m poetry install --no-dev
+          python -m pip install --upgrade pip toml
+
+      - name: Install poetry
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        shell: bash
+        run: |
+          curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
+          python get-poetry.py -y
+
+      - name: Build and install with poetry
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        shell: bash
+        run: |
+          $HOME/.poetry/bin/poetry run python -m pip install --upgrade pip
+          $HOME/.poetry/bin/poetry env info
+          rm poetry.lock
+          $HOME/.poetry/bin/poetry update
+          $HOME/.poetry/bin/poetry build
+          $HOME/.poetry/bin/poetry install --no-interaction --no-dev
 
       - name: Bump version
         shell: bash
         env:
           github_event_head_commit_message: ${{ github.event.head_commit.message }}
         run: |
+          # Note: The following line reads the HEAD commit message to look for an indication of how
+          # to bump the version number.  Specifically, if `#patch`, `#minor`, or `#major` is present
+          # in the commit message, it bumps the corresponding version number.  Those can also be
+          # prepended as `#premajor`, etc., to add/bump the prerelease modifier.  If none of those
+          # are present, `#patch` is assumed — that is, the lowest-significance number is
+          # incremented.  See the documentation of the `poetry version` command for details.
           export version_bump_rule=$(python .github/scripts/parse_bump_rule.py)
           echo "version_bump_rule: '${version_bump_rule}'"
-          python -m poetry version "${version_bump_rule}"
+          $HOME/.poetry/bin/poetry version "${version_bump_rule}"
           export new_version=$(python .github/scripts/parse_version.py pyproject.toml)
           echo "new_version: '${new_version}'"
           echo "new_version=${new_version}" >> $GITHUB_ENV  # Save env variable for later steps
@@ -131,10 +158,12 @@ jobs:
           # 1) Get key from https://pypi.org/manage/account/token/
           # 2) Copy it to Github > repo > Settings > Secrets
           POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+        shell: bash
         run: |
-          python -m poetry build
-          python -m poetry install --no-dev
-          python -m poetry publish
+          # Do these first two steps again to ensure the version is right
+          $HOME/.poetry/bin/poetry build
+          $HOME/.poetry/bin/poetry install --no-interaction --no-dev
+          $HOME/.poetry/bin/poetry publish
 
 
   binder:
