--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,13 @@ numpy = "^1.15"
 scipy = "^1.0"
 numba = {version = ">=0.50", markers = "implementation_name == 'cpython'"}
 mkapi = {version = "1.0.13", optional = true, python = ">=3.7"}
-quaternionic = ">=0.1.16"
-spherical = "^1"
+quaternionic = "^1.0"
+spherical = "^1.0"
 h5py = "^3"
 inflection = "^0.5.1"
 requests = "^2.24.0"
 pytest-forked = "^1.3.0"
-tqdm = "^4.48.2"
+tqdm = "^4.48.2, <4.61.2"
 pytz = "^2020.1"
 urllib3 = "^1.25.10"
 pandas = "^1.1.2"
