--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ target-version = ['py36']
 minversion = "6.0"
 norecursedirs = ".* build dist *.egg-info install notes ENV"
 junit_family="xunit2"
-addopts = "-s -v --tb=short --doctest-glob='' --cov=sxs --cov-branch --cov-report xml"
+addopts = "-s -v --doctest-glob='' --cov=sxs --cov-branch --cov-report xml"
 
 [build-system]
 requires = ["poetry-core>=1.0.0a9"]
