--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         shell: bash
         run: |
-          poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml --durations=0
+          poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml --durations=0 -k unwritable
 
       - name: Upload coverage
         if: "matrix.python-version == 3.9 && matrix.os == 'ubuntu-latest'"
