--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,10 @@ homepage = "https://github.com/sxs-collaboration/sxs"
 include = ["tests"]
 
 [tool.poetry.dependencies]
-python = ">=3.7,<3.10"
-importlib-metadata = {version = "^1.0", python = "<3.8"}
-numpy = "^1.15"
+python = ">=3.8,<3.11"
+numpy = "^1.20"
 scipy = "^1.0"
-numba = {version = ">=0.50", markers = "implementation_name == 'cpython'"}
+numba = {version = ">=0.55", markers = "implementation_name == 'cpython'"}
 mkapi = {version = "1.0.13", optional = true, python = ">=3.7"}
 quaternionic = "^1.0"
 spherical = "^1.0"
@@ -26,7 +25,7 @@ pytz = "^2020.1"
 urllib3 = "^1.25.10"
 pandas = "^1.1.2"
 mkdocs = {version = ">=1.1.2", optional = true, markers = "implementation_name == 'cpython'"}
-black = {version = ">=20.8b1", optional = true, markers = "implementation_name == 'cpython'", allow-prereleases = true}
+black = {version = ">=22.1", optional = true, markers = "implementation_name == 'cpython'"}
 pymdown-extensions = {version = "^8", optional = true, markers = "implementation_name == 'cpython'"}
 spinsfast = {version = "^104", optional = true, markers = "sys_platform != 'win32'"}
 ipywidgets = {version = "^7.5.1", optional = true}
@@ -46,7 +45,7 @@ pylatexenc = "^2.7"
 feedparser = "^6.0.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.0"
+pytest = "^7.0"
 pytest-cov = ">=2.10.1"
 
 [tool.poetry.extras]
@@ -57,7 +56,7 @@ ecosystem = ["ipywidgets", "ipykernel", "jupyter_contrib_nbextensions", "jupyter
 
 [tool.black]
 line-length = 120
-target-version = ['py36']
+target-version = ['py38','py39','py310']
 
 [tool.pytest.ini_options]
 minversion = "6.0"
@@ -66,5 +65,5 @@ junit_family="xunit2"
 addopts = "-s -v --doctest-glob='' --cov=sxs --cov-branch --cov-report xml"
 
 [build-system]
-requires = ["poetry-core>=1.0.0a9"]
+requires = ["poetry-core>=1.0.1"]
 build-backend = "poetry.core.masonry.api"
