--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sxs"
-version = "2022.0.0"
+version = "2022.4.0"
 description = "Interface to data produced by the Simulating eXtreme Spacetimes collaboration"
 readme = "README.md"
 license = "MIT"
@@ -27,7 +27,7 @@ pandas = "^1.1.2"
 mkdocs = {version = ">=1.1.2", optional = true, markers = "implementation_name == 'cpython'"}
 black = {version = ">=22.1", optional = true, markers = "implementation_name == 'cpython'"}
 pymdown-extensions = {version = "^8", optional = true, markers = "implementation_name == 'cpython'"}
-spinsfast = {version = "^104", optional = true, markers = "sys_platform != 'win32'"}
+spinsfast = {version = ">=2022", optional = true, markers = "sys_platform != 'win32'"}
 ipywidgets = {version = "^7.5.1", optional = true}
 ipykernel = {version = "^5.3.4", optional = true}
 jupyter_contrib_nbextensions = {version = "^0.5.1", optional = true}
@@ -39,8 +39,8 @@ sympy = {version = "^1.6.2", optional = true}
 corner = {version = "^2.1.0", optional = true}
 qgrid = {version = "^1.3.1", optional = true}
 rise = {version = "^5.6.1", optional = true}
-quaternion = {version = "^0.3.1", optional = true}
-scri = {version = "^2020.8.18", optional = true, markers = "sys_platform != 'win32'"}
+numpy-quaternion = {version = ">=0.3.1", optional = true}
+scri = {version = ">=2020.8.18", optional = true, markers = "sys_platform != 'win32'"}
 pylatexenc = "^2.7"
 feedparser = "^6.0.1"
 
