--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ numpy-quaternion = {version = ">=0.3.1", optional = true}
 scri = {version = ">=2020.8.18", optional = true, markers = "sys_platform != 'win32'"}
 pylatexenc = "^2.7"
 feedparser = "^6.0.1"
+caltechdata-api = "^0.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
