--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ homepage = "https://github.com/sxs-collaboration/sxs"
 include = ["tests"]
 
 [tool.poetry.dependencies]
+# Mandatory dependencies
 python = ">=3.8,<3.12"
 numpy = "^1.20"
 scipy = "^1.0"
@@ -23,7 +24,10 @@ tqdm = "^4.48.2, <4.61.2"
 pytz = "^2020.1"
 urllib3 = "^1.25.10"
 pandas = "^1.1.2"
-spinsfast = {version = ">=2022", optional = true, markers = "sys_platform != 'win32'"}
+pylatexenc = "^2.7"
+feedparser = "^6.0.1"
+caltechdata-api = "^0.3.0"
+# Optional dependencies, for `extras` section below
 ipywidgets = {version = "^7.5.1", optional = true}
 ipykernel = {version = "^5.3.4", optional = true}
 jupyter_contrib_nbextensions = {version = "^0.5.1", optional = true}
@@ -36,33 +40,48 @@ corner = {version = "^2.1.0", optional = true}
 qgrid = {version = "^1.3.1", optional = true}
 rise = {version = "^5.6.1", optional = true}
 numpy-quaternion = {version = ">=0.3.1", optional = true}
+spinsfast = {version = ">=2022", optional = true, markers = "sys_platform != 'win32'"}
 scri = {version = ">=2020.8.18", optional = true, markers = "sys_platform != 'win32'"}
-pylatexenc = "^2.7"
-feedparser = "^6.0.1"
-caltechdata-api = "^0.3.0"
 
-[tool.poetry.dev-dependencies]
+
+[tool.poetry.group.test]
+optional = true
+
+[tool.poetry.group.test.dependencies]
 pytest = "^7.0"
 pytest-cov = ">=2.10.1"
-mkdocs = {version = ">=1.1.2", optional = true, markers = "implementation_name == 'cpython'"}
-mkdocstrings = {extras = ["python"], version = "^0.20.0", optional = true, markers = "implementation_name == 'cpython'"}
-black = {version = ">=22.1", optional = true, markers = "implementation_name == 'cpython'"}
-pymdown-extensions = {version = "^8", optional = true, markers = "implementation_name == 'cpython'"}
+
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = ">=1.1.2"
+mkdocstrings = ">=0.22.0"
+#pymdown-extensions = "^8"
+
+
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
+black = ">=22.1"
 
 [tool.poetry.extras]
-mkdocs = ["mkdocs"]
-pymdown-extensions = ["pymdown-extensions"]
 ecosystem = ["ipywidgets", "ipykernel", "jupyter_contrib_nbextensions", "jupyterlab", "line_profiler", "memory_profiler", "matplotlib", "sympy", "corner", "qgrid", "rise", "quaternion", "scri"]
+
 
 [tool.black]
 line-length = 120
 target-version = ['py38','py39','py310']
+
 
 [tool.pytest.ini_options]
 minversion = "6.0"
 norecursedirs = ".* build dist *.egg-info install notes ENV"
 junit_family="xunit2"
 addopts = "-s -v --doctest-glob='' --cov=sxs --cov-branch --cov-report xml"
+
 
 [build-system]
 requires = ["poetry-core>=1.0.1"]
