--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,24 +31,23 @@ jobs:
         shell: bash
         run: |
           echo "skipping_build_and_test_replicate=${skip_replicates}" >> $GITHUB_ENV
-          # echo "skipping_build_and_test_replicate='false'" >> $GITHUB_ENV
 
       - name: Check out code
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: actions/checkout@v3
+
+      # See https://github.com/actions/setup-python/blob/main/docs/advanced-usage.md#caching-packages
+      # for authoritative source on how to install and cache poetry
+      - name: Install poetry
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        run: pipx install poetry
 
       - name: Set up python ${{ matrix.python-version }}
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Install poetry
-        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
-        shell: bash
-        run: |
-          curl -sSL https://install.python-poetry.org | POETRY_HOME="$HOME/.poetry" python -
-          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
+          cache: 'poetry'
 
       - name: Build and install with poetry
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
@@ -56,10 +55,7 @@ jobs:
         run: |
           poetry run python -m pip install --upgrade pip
           poetry env info
-          rm -f poetry.lock
-          poetry update
-          poetry build
-          poetry install --no-interaction
+          poetry install --no-interaction --with test
 
       - name: Run tests
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
@@ -69,7 +65,7 @@ jobs:
 
       - name: Upload coverage
         if: "matrix.python-version == '3.11' && matrix.os == 'ubuntu-latest'"
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v3
 
 
   release:
@@ -85,34 +81,26 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
-      - name: Set up python ${{ matrix.python-version }}
+      - name: Install poetry
+        run: pipx install poetry
+
+      - name: Set up python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.11'
+          cache: 'poetry'
 
       - name: Install toml
-        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         shell: bash
         run: |
           python -m pip install --upgrade pip toml
 
-      - name: Install poetry
-        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
-        shell: bash
-        run: |
-          curl -sSL https://install.python-poetry.org | POETRY_HOME="$HOME/.poetry" python -
-          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-
       - name: Build and install with poetry
-        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         shell: bash
         run: |
           poetry run python -m pip install --upgrade pip
           poetry env info
-          rm -f poetry.lock
-          poetry update
-          poetry build
-          poetry install --no-interaction --no-dev
+          poetry install --no-interaction
 
       - name: Bump version
         shell: bash
