--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,8 +4,12 @@ mkdocs:
   configuration: mkdocs.yml
 
 build:
+  os: ubuntu-22.04
   tools:
     python: "3.11"
+
+mkdocs:
+  configuration: mkdocs.yml
 
 python:
   install:
