--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,10 +7,18 @@ on:
     tags: ['*']
   pull_request:
 
+concurrency:
+  group: test-${{ github.head_ref }}
+  cancel-in-progress: true
+
+env:
+  PYTHONUNBUFFERED: "1"
+  FORCE_COLOR: "1"
+
 jobs:
 
   build:
-    name: ${{ matrix.os }} python ${{ matrix.python-version }}
+    name: Python ${{ matrix.python-version }} on ${{ startsWith(matrix.os, 'macos-') && 'macOS' || startsWith(matrix.os, 'windows-') && 'Windows' || 'Linux' }}
 
     runs-on: ${{ matrix.os }}
 
@@ -36,32 +44,43 @@ jobs:
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: actions/checkout@v3
 
-      # See https://github.com/actions/setup-python/blob/main/docs/advanced-usage.md#caching-packages
-      # for authoritative source on how to install and cache poetry
-      - name: Install poetry
-        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
-        run: pipx install poetry
-
-      - name: Set up python ${{ matrix.python-version }}
-        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'poetry'
 
-      - name: Build and install with poetry
-        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
-        shell: bash
-        run: |
-          poetry run python -m pip install --upgrade pip
-          poetry env info
-          poetry install --no-interaction --with test
+      - name: Install Hatch
+        run: pip install --upgrade hatch
 
       - name: Run tests
-        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
-        shell: bash
-        run: |
-          poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml --durations=0
+        run: hatch run test
+
+      # # See https://github.com/actions/setup-python/blob/main/docs/advanced-usage.md#caching-packages
+      # # for authoritative source on how to install and cache poetry
+      # - name: Install poetry
+      #   if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+      #   run: pipx install poetry
+
+      # - name: Set up python ${{ matrix.python-version }}
+      #   if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+      #   uses: actions/setup-python@v4
+      #   with:
+      #     python-version: ${{ matrix.python-version }}
+      #     cache: 'poetry'
+
+      # - name: Build and install with poetry
+      #   if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+      #   shell: bash
+      #   run: |
+      #     poetry run python -m pip install --upgrade pip
+      #     poetry env info
+      #     poetry install --no-interaction --with test
+
+      # - name: Run tests
+      #   if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+      #   shell: bash
+      #   run: |
+      #     poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml --durations=0
 
       - name: Upload coverage
         if: "matrix.python-version == '3.11' && matrix.os == 'ubuntu-latest'"
@@ -81,26 +100,34 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
-      - name: Install poetry
-        run: pipx install poetry
-
-      - name: Set up python 3.11
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
-          cache: 'poetry'
+          python-version: ${{ matrix.python-version }}
 
-      - name: Install toml
-        shell: bash
-        run: |
-          python -m pip install --upgrade pip toml
+      - name: Install Hatch
+        run: pip install --upgrade hatch
 
-      - name: Build and install with poetry
-        shell: bash
-        run: |
-          poetry run python -m pip install --upgrade pip
-          poetry env info
-          poetry install --no-interaction
+      # - name: Install poetry
+      #   run: pipx install poetry
+
+      # - name: Set up python 3.11
+      #   uses: actions/setup-python@v4
+      #   with:
+      #     python-version: '3.11'
+      #     cache: 'poetry'
+
+      # - name: Install toml
+      #   shell: bash
+      #   run: |
+      #     python -m pip install --upgrade pip toml
+
+      # - name: Build and install with poetry
+      #   shell: bash
+      #   run: |
+      #     poetry run python -m pip install --upgrade pip
+      #     poetry env info
+      #     poetry install --no-interaction
 
       - name: Bump version
         shell: bash
@@ -115,8 +142,9 @@ jobs:
           # incremented.  See the documentation of the `poetry version` command for details.
           export version_bump_rule=$(python .github/scripts/parse_bump_rule.py)
           echo "version_bump_rule: '${version_bump_rule}'"
-          poetry version "${version_bump_rule}"
-          export new_version=$(python .github/scripts/parse_version.py pyproject.toml)
+          hatch version "${version_bump_rule}"
+          export new_version=$(hatch version)
+          #export new_version=$(python .github/scripts/parse_version.py pyproject.toml)
           echo "new_version: '${new_version}'"
           echo "new_version=${new_version}" >> $GITHUB_ENV  # Save env variable for later steps
 
@@ -158,13 +186,16 @@ jobs:
         env:
           # 1) Get key from https://pypi.org/manage/account/token/
           # 2) Copy it to Github > repo > Settings > Secrets
-          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+          # POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+          HATCH_INDEX_USER: __token__
+          HATCH_INDEX_AUTH: ${{ secrets.PYPI_TOKEN }}
         shell: bash
         run: |
-          # Do these first two steps again to ensure the version is right
-          poetry build
-          poetry install --no-interaction --no-dev
-          poetry publish
+          # # Do these first two steps again to ensure the version is right
+          # poetry build
+          # poetry install --no-interaction --no-dev
+          # poetry publish
+          hatch publish
 
 
   binder:
