--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,85 @@
+[project]
+name = "sxs"
+version = "2022.4.5"
+description = "Interface to data produced by the Simulating eXtreme Spacetimes collaboration"
+readme = "README.md"
+requires-python = ">=3.8"
+license = "MIT"
+authors = [
+  { name = "Michael Boyle", email = "michael.oliver.boyle@gmail.com" },
+]
+dependencies = [
+  "numpy >=1.20",
+  "scipy >=1.0",
+  "numba >=0.55; implementation_name == 'cpython'",
+  "quaternionic >=1.0",
+  "spherical >=1.0",
+  "h5py >=3",
+  "inflection >=0.5.1",
+  "requests >=2.24.0",
+  "tqdm >=4.63.1",
+  "pytz >=2020.1",
+  "urllib3 >=1.25.10",
+  "pandas >=1.1.2",
+  "pylatexenc >=2.7",
+  "feedparser >=6.0.1",
+  "caltechdata-api >=0.3.0",
+]
+
+[project.urls]
+Documentation = "https://sxs.readthedocs.io/en/main/"
+"Source code" = "https://github.com/sxs-collaboration/sxs"
+
+
+[tool.hatch.envs.default]
+dependencies = [
+  "pytest",
+  "pytest-cov",
+  "pytest-forked >=1.3.0"
+]
+[tool.hatch.envs.default.scripts]
+test = "pytest {args:tests}"
+
+[tool.hatch.envs.docs]
+dependencies = [
+  "mkdocs",
+  "mkdocstrings-python",
+  "mkdocs-material"
+]
+[tool.hatch.envs.docs.scripts]
+build = "mkdocs build --clean --strict"
+serve = "mkdocs serve --dev-addr localhost:8000"
+
+[tool.hatch.envs.test]
+dependencies = [
+  "pytest",
+  "pytest-cov",
+  "pytest-forked >=1.3.0"
+]
+[tool.hatch.envs.test.scripts]
+test = "pytest"
+
+[project.optional-dependencies]
+ecosystem = [
+  "ipywidgets >=7.5.1",
+  "ipykernel >=5.3.4",
+  "jupyter_contrib_nbextensions >=0.5.1",
+  "jupyterlab >=2.2.8",
+  "line_profiler >=3.0.2",
+  "memory_profiler >=0.57.0",
+  "matplotlib >=2.1.1",
+  "sympy >=1.6.2",
+  "corner >=2.1.0",
+  "qgrid >=1.3.1",
+  "rise >=5.6.1",
+  "numpy-quaternion >=0.3.1",
+  "spinsfast >=2022; sys_platform != 'win32'",
+  "scri >=2020.8.18; sys_platform != 'win32'"
+]
+
+
+
+
 [tool.poetry]
 name = "sxs"
 version = "2022.4.5"
@@ -6,7 +88,7 @@ readme = "README.md"
 license = "MIT"
 authors = ["Michael Boyle <michael.oliver.boyle@gmail.com>"]
 homepage = "https://github.com/sxs-collaboration/sxs"
-include = ["tests"]
+include = ["test"]
 
 [tool.poetry.dependencies]
 # Mandatory dependencies
@@ -83,6 +165,9 @@ junit_family="xunit2"
 addopts = "-s -v --doctest-glob='' --cov=sxs --cov-branch --cov-report xml"
 
 
+# [build-system]
+# requires = ["poetry-core>=1.0.1"]
+# build-backend = "poetry.core.masonry.api"
 [build-system]
-requires = ["poetry-core>=1.0.1"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
