--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ repo_url: https://github.com/sxs-collaboration/sxs
 
 plugins:
   - search
+  - mkdocs-jupyter
   - mkdocstrings:
       default_handler: python
       handlers:
@@ -13,26 +14,49 @@ plugins:
             show_source: true
 
 nav:
-    - Home: 'index.md'
-    - Mathematica: 'mathematica.md'
-    - API: 'api.md'
+  - Home: "index.md"
+  - Tutorials:
+    - "tutorials/00-Introduction.ipynb"
+    - "tutorials/02-Catalog.ipynb"
+    - "tutorials/01-Metadata.ipynb"
+    - "tutorials/03-Horizons.ipynb"
+    - "tutorials/04-Waveforms.ipynb"
+  - API:
+    - "Time Series": "api/time_series.md"
+    - "Waveforms": "api/waveforms.md"
+    - "Horizons": "api/horizons.md"
+    - "Metadata": "api/metadata.md"
+    - "Catalog": "api/catalog.md"
+  - "Calling from Mathematica": "mathematica.md"
 
 theme:
-  name: 'material' # 'readthedocs', 'mkdocs', 'material'
-  # highlightjs: true
-  # hljs_languages:
-  #   - mathematica
+  name: "material" # "readthedocs", "mkdocs", "material"
+  highlightjs: true
+  hljs_languages:
+    - python
+    - julia
+    - mathematica
   palette:
     scheme: sxs
   favicon: images/favicon.ico
   icon:
     logo: material/library
-  # logo: images/sxs_logo.png
+    #logo: images/sxs_logo.png
+    repo: fontawesome/brands/github
+  features:
+    - navigation.instant
+    - navigation.tracking
+    # - navigation.tabs
+    # - navigation.tabs.sticky
+    # - navigation.sections
+    # - toc.integrate 
 
 extra_css:
   - stylesheets/extra.css
 
 extra_javascript:
+  - javascript/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js
 
 markdown_extensions:
@@ -40,5 +64,6 @@ markdown_extensions:
       permalink: "#"
   - pymdownx.arithmatex:
       generic: true
-  # - pymdownx.highlight
-  # - pymdownx.superfences
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.superfences 
