--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ dependencies = [
 docs = [
   "mkdocs",
   "mkdocstrings-python",
-  "mkdocs-material"
+  "mkdocs-material",
+  "mkdocs-jupyter"
 ]
 ecosystem = [
   "ipywidgets >=7.5.1",
@@ -80,23 +81,25 @@ test = "pytest {args:tests}"
 
 [tool.hatch.envs.docs]
 dependencies = [
-  # "mkdocs",
-  # "mkdocstrings-python",
-  # "mkdocs-material",
-  # "mkdocs-jupyter"
-  "nbconvert>=7.2.9,<8",
-  "mkdocs>=1.4.0,<2",
-  "mkdocs-material>9.0.0",
-  "jupytext>1.13.8,<2",
-  "Pygments>2.12.0",
-  "ipykernel<7.0.0,>6.0.0",
-  "mkdocs-jupyter",
-  "mkdocstrings-python"
+  "mkdocs",
+  "mkdocstrings-python",
+  "mkdocs-material",
+  "mkdocs-jupyter"
+  # "nbconvert>=7.2.9,<8",
+  # "mkdocs>=1.4.0,<2",
+  # "mkdocs-material>9.0.0",
+  # "jupytext>1.13.8,<2",
+  # "Pygments>2.12.0",
+  # "ipykernel<7.0.0,>6.0.0",
+  # "mkdocs-jupyter",
+  # "mkdocstrings-python"
 ]
 [tool.hatch.envs.docs.scripts]
 # Run these as `hatch run docs:build` or `hatch run docs:serve`
 build = "mkdocs build --clean"
 serve = "mkdocs serve --dev-addr localhost:8000"
+
+# This is just a workaround; see https://github.com/danielfrg/mkdocs-jupyter/issues/154
 [tool.hatch.envs.docs.env-vars]
 JUPYTER_PLATFORM_DIRS = "1"
 
